mobile navbar and spacing fixes

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -29,17 +29,23 @@ body {
 }
 
 header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
 	border-bottom: 1px solid #888;
+	background-color: #080808;
 }
 
 #header {
 	width: min(calc(100% - 4rem), 720px);
 	height: 3em;
 	margin: auto;
+	padding: 0 1em;
 	display: flex;
 	flex-direction: row;
-	gap: 1em;
-	padding: 0 1em;
+	gap: .8em;
+	align-items: center;
 }
 
 img#header-icon {
@@ -51,9 +57,11 @@ img#header-icon {
 
 #header-text {
 	width: 11em;
+	margin-left: -0.5rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	flex-grow: 1;
 }
 
 #header-text h1 {
@@ -69,13 +77,17 @@ img#header-icon {
 	color: #bbb;
 }
 
-header ul {
+a#header-links-toggle {
+	width: 1.8rem;
+	display: none;
+}
+
+header ul#header-links {
 	margin: 0;
 	padding: 0;
 	display: flex;
 	flex-direction: row;
 	gap: .5em;
-	/* overflow-x: scroll; */
 	align-items: center;
 }
 
@@ -130,7 +142,7 @@ header ul li a:hover {
 main {
 	width: 	min(calc(100% - 4rem), 720px);
 	min-height: calc(100vh - 10.3rem);
-	margin: auto;
+	margin: 5rem auto 2rem auto;
 }
 
 main h1 {
@@ -363,13 +375,55 @@ footer {
 	mix-blend-mode: overlay;
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 780px) {
 	body {
 		font-size: 14px;
 	}
 
-	#header-text {
+	div#header {
+		width: calc(100vw - 2rem);
+		margin: 0;
+	}
+
+	div#header-text {
+		flex-grow: 1;
+	}
+
+	a#header-links-toggle {
+		display: flex;
+	}
+
+	header ul#header-links {
+		position: fixed;
+		left: 0;
+		top: 2.7rem;
+		width: calc(100vw - 2rem);
+		padding: 1rem;
+		flex-direction: column;
+		gap: 1rem;
+		border-bottom: 1px solid #888;
+		background: #080808;
 		display: none;
+	}
+
+	header ul#header-links.open {
+		display: flex;
+	}
+
+	ul#header-links li {
+		width: 100%;
+	}	
+
+	ul#header-links li a,
+	ul#header-links li span {
+		margin: 0;
+		display: block;
+		font-size: 1rem;
+		text-align: center;
+	}
+
+	main {
+		margin-top: 4rem;
 	}
 }
 
